// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/permission_schemes_settings/permission_schemes_settings should match snapshot loading 1`] = `
<LoadingScreen
  position="relative"
  style={Object {}}
/>
`;

exports[`components/admin_console/permission_schemes_settings/permission_schemes_settings should match snapshot with schemes 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Permission Schemes"
      id="admin.permissions.permissionSchemes"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Permission Schemes set the default permissions for Team Admins, Channel Admins and everyone else. Learn more about permission schemes in our [documentation](!https://about.mattermost.com/default-advanced-permissions)."
          id="admin.permissions.introBanner"
        />
      </span>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="System Scheme"
            id="admin.permissions.systemSchemeBannerTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="Set the default permissions inherited by all teams unless a [Team Override Scheme](!https://about.mattermost.com/default-team-override-scheme) is applied."
            id="admin.permissions.systemSchemeBannerText"
          />
        </span>
      </div>
      <div
        className="button"
      >
        <Link
          className="btn btn-primary"
          replace={false}
          to="/admin_console/permissions/system-scheme"
        >
          <FormattedMessage
            defaultMessage="Edit Scheme"
            id="admin.permissions.systemSchemeBannerButton"
            values={Object {}}
          />
        </Link>
      </div>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Team Override Schemes"
            id="admin.permissions.teamOverrideSchemesTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="Use when specific teams need permission exceptions to the [System Scheme](!https://about.mattermost.com/default-system-scheme)."
            id="admin.permissions.teamOverrideSchemesBannerText"
          />
        </span>
      </div>
      <div
        className="button"
      >
        <Link
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          replace={false}
          to="/admin_console/permissions/team-override-scheme"
        >
          <FormattedMessage
            defaultMessage="New Team Override Scheme"
            id="admin.permissions.teamOverrideSchemesNewButton"
            values={Object {}}
          />
        </Link>
      </div>
    </div>
    <Connect(PermissionsSchemeSummary)
      key="id-1"
      scheme={
        Object {
          "description": "Test description 1",
          "id": "id-1",
          "name": "Test 1",
        }
      }
    />
    <Connect(PermissionsSchemeSummary)
      key="id-2"
      scheme={
        Object {
          "description": "Test description 2",
          "id": "id-2",
          "name": "Test 2",
        }
      }
    />
    <Connect(PermissionsSchemeSummary)
      key="id-3"
      scheme={
        Object {
          "description": "Test description 3",
          "id": "id-3",
          "name": "Test 3",
        }
      }
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_schemes_settings should match snapshot without schemes 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Permission Schemes"
      id="admin.permissions.permissionSchemes"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Permission Schemes set the default permissions for Team Admins, Channel Admins and everyone else. Learn more about permission schemes in our [documentation](!https://about.mattermost.com/default-advanced-permissions)."
          id="admin.permissions.introBanner"
        />
      </span>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="System Scheme"
            id="admin.permissions.systemSchemeBannerTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="Set the default permissions inherited by all teams unless a [Team Override Scheme](!https://about.mattermost.com/default-team-override-scheme) is applied."
            id="admin.permissions.systemSchemeBannerText"
          />
        </span>
      </div>
      <div
        className="button"
      >
        <Link
          className="btn btn-primary"
          replace={false}
          to="/admin_console/permissions/system-scheme"
        >
          <FormattedMessage
            defaultMessage="Edit Scheme"
            id="admin.permissions.systemSchemeBannerButton"
            values={Object {}}
          />
        </Link>
      </div>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Team Override Schemes"
            id="admin.permissions.teamOverrideSchemesTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="Use when specific teams need permission exceptions to the [System Scheme](!https://about.mattermost.com/default-system-scheme)."
            id="admin.permissions.teamOverrideSchemesBannerText"
          />
        </span>
      </div>
      <div
        className="button"
      >
        <Link
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          replace={false}
          to="/admin_console/permissions/team-override-scheme"
        >
          <FormattedMessage
            defaultMessage="New Team Override Scheme"
            id="admin.permissions.teamOverrideSchemesNewButton"
            values={Object {}}
          />
        </Link>
      </div>
    </div>
    <div
      className="no-team-schemes"
    >
      <FormattedMessage
        defaultMessage="No team override schemes created."
        id="admin.permissions.teamOverrideSchemesNoSchemes"
        values={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_schemes_settings should show migration in-progress view 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Permission Schemes"
      id="admin.permissions.permissionSchemes"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Permission Schemes set the default permissions for Team Admins, Channel Admins and everyone else. Learn more about permission schemes in our [documentation](!https://about.mattermost.com/default-advanced-permissions)."
          id="admin.permissions.introBanner"
        />
      </span>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="System Scheme"
            id="admin.permissions.systemSchemeBannerTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="Set the default permissions inherited by all teams unless a [Team Override Scheme](!https://about.mattermost.com/default-team-override-scheme) is applied."
            id="admin.permissions.systemSchemeBannerText"
          />
        </span>
      </div>
      <div
        className="button"
      >
        <Link
          className="btn btn-primary"
          replace={false}
          to="/admin_console/permissions/system-scheme"
        >
          <FormattedMessage
            defaultMessage="Edit Scheme"
            id="admin.permissions.systemSchemeBannerButton"
            values={Object {}}
          />
        </Link>
      </div>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Team Override Schemes"
            id="admin.permissions.teamOverrideSchemesTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="Use when specific teams need permission exceptions to the [System Scheme](!https://about.mattermost.com/default-system-scheme)."
            id="admin.permissions.teamOverrideSchemesBannerText"
          />
        </span>
      </div>
      <div
        className="button"
      >
        <Link
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          replace={false}
          to="/admin_console/permissions/team-override-scheme"
        >
          <FormattedMessage
            defaultMessage="New Team Override Scheme"
            id="admin.permissions.teamOverrideSchemesNewButton"
            values={Object {}}
          />
        </Link>
      </div>
    </div>
    <div
      className="team-override-unavailable"
    >
      <div
        className="team-override-unavailable__inner"
      >
        <FormattedMessage
          defaultMessage="Migration job in progress: Team Override Schemes are not available until the job server completes the permissions migration. Learn more in the {documentationLink}."
          id="admin.permissions.teamOverrideSchemesInProgress"
          values={
            Object {
              "documentationLink": <Link
                replace={false}
                target="_blank"
                to="https://docs.mattermost.com/administration/config-settings.html#jobs"
              >
                <FormattedMessage
                  defaultMessage="documentation"
                  id="admin.permissions.documentationLinkText"
                  values={Object {}}
                />
              </Link>,
            }
          }
        />
      </div>
    </div>
    <Connect(PermissionsSchemeSummary)
      key="id-1"
      scheme={
        Object {
          "description": "Test description 1",
          "id": "id-1",
          "name": "Test 1",
        }
      }
    />
    <Connect(PermissionsSchemeSummary)
      key="id-2"
      scheme={
        Object {
          "description": "Test description 2",
          "id": "id-2",
          "name": "Test 2",
        }
      }
    />
    <Connect(PermissionsSchemeSummary)
      key="id-3"
      scheme={
        Object {
          "description": "Test description 3",
          "id": "id-3",
          "name": "Test 3",
        }
      }
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_schemes_settings should show migration on hold view 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Permission Schemes"
      id="admin.permissions.permissionSchemes"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Permission Schemes set the default permissions for Team Admins, Channel Admins and everyone else. Learn more about permission schemes in our [documentation](!https://about.mattermost.com/default-advanced-permissions)."
          id="admin.permissions.introBanner"
        />
      </span>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="System Scheme"
            id="admin.permissions.systemSchemeBannerTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="Set the default permissions inherited by all teams unless a [Team Override Scheme](!https://about.mattermost.com/default-team-override-scheme) is applied."
            id="admin.permissions.systemSchemeBannerText"
          />
        </span>
      </div>
      <div
        className="button"
      >
        <Link
          className="btn btn-primary"
          replace={false}
          to="/admin_console/permissions/system-scheme"
        >
          <FormattedMessage
            defaultMessage="Edit Scheme"
            id="admin.permissions.systemSchemeBannerButton"
            values={Object {}}
          />
        </Link>
      </div>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Team Override Schemes"
            id="admin.permissions.teamOverrideSchemesTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="Use when specific teams need permission exceptions to the [System Scheme](!https://about.mattermost.com/default-system-scheme)."
            id="admin.permissions.teamOverrideSchemesBannerText"
          />
        </span>
      </div>
      <div
        className="button"
      >
        <Link
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          replace={false}
          to="/admin_console/permissions/team-override-scheme"
        >
          <FormattedMessage
            defaultMessage="New Team Override Scheme"
            id="admin.permissions.teamOverrideSchemesNewButton"
            values={Object {}}
          />
        </Link>
      </div>
    </div>
    <div
      className="team-override-unavailable"
    >
      <div
        className="team-override-unavailable__inner"
      >
        <FormattedMessage
          defaultMessage="Migration job on hold: Team Override Schemes are not available until the job server can execute the permissions migration. The job will be automatically started when the job server is enabled. Learn more in the {documentationLink}."
          id="admin.permissions.teamOverrideSchemesNoJobsEnabled"
          values={
            Object {
              "documentationLink": <Link
                replace={false}
                target="_blank"
                to="https://docs.mattermost.com/administration/config-settings.html#jobs"
              >
                <FormattedMessage
                  defaultMessage="documentation"
                  id="admin.permissions.documentationLinkText"
                  values={Object {}}
                />
              </Link>,
            }
          }
        />
      </div>
    </div>
    <Connect(PermissionsSchemeSummary)
      key="id-1"
      scheme={
        Object {
          "description": "Test description 1",
          "id": "id-1",
          "name": "Test 1",
        }
      }
    />
    <Connect(PermissionsSchemeSummary)
      key="id-2"
      scheme={
        Object {
          "description": "Test description 2",
          "id": "id-2",
          "name": "Test 2",
        }
      }
    />
    <Connect(PermissionsSchemeSummary)
      key="id-3"
      scheme={
        Object {
          "description": "Test description 3",
          "id": "id-3",
          "name": "Test 3",
        }
      }
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_schemes_settings should show normal view (jobs disabled after migration) 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Permission Schemes"
      id="admin.permissions.permissionSchemes"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Permission Schemes set the default permissions for Team Admins, Channel Admins and everyone else. Learn more about permission schemes in our [documentation](!https://about.mattermost.com/default-advanced-permissions)."
          id="admin.permissions.introBanner"
        />
      </span>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="System Scheme"
            id="admin.permissions.systemSchemeBannerTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="Set the default permissions inherited by all teams unless a [Team Override Scheme](!https://about.mattermost.com/default-team-override-scheme) is applied."
            id="admin.permissions.systemSchemeBannerText"
          />
        </span>
      </div>
      <div
        className="button"
      >
        <Link
          className="btn btn-primary"
          replace={false}
          to="/admin_console/permissions/system-scheme"
        >
          <FormattedMessage
            defaultMessage="Edit Scheme"
            id="admin.permissions.systemSchemeBannerButton"
            values={Object {}}
          />
        </Link>
      </div>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Team Override Schemes"
            id="admin.permissions.teamOverrideSchemesTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="Use when specific teams need permission exceptions to the [System Scheme](!https://about.mattermost.com/default-system-scheme)."
            id="admin.permissions.teamOverrideSchemesBannerText"
          />
        </span>
      </div>
      <div
        className="button"
      >
        <Link
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          replace={false}
          to="/admin_console/permissions/team-override-scheme"
        >
          <FormattedMessage
            defaultMessage="New Team Override Scheme"
            id="admin.permissions.teamOverrideSchemesNewButton"
            values={Object {}}
          />
        </Link>
      </div>
    </div>
    <Connect(PermissionsSchemeSummary)
      key="id-1"
      scheme={
        Object {
          "description": "Test description 1",
          "id": "id-1",
          "name": "Test 1",
        }
      }
    />
    <Connect(PermissionsSchemeSummary)
      key="id-2"
      scheme={
        Object {
          "description": "Test description 2",
          "id": "id-2",
          "name": "Test 2",
        }
      }
    />
    <Connect(PermissionsSchemeSummary)
      key="id-3"
      scheme={
        Object {
          "description": "Test description 3",
          "id": "id-3",
          "name": "Test 3",
        }
      }
    />
  </div>
</div>
`;
